<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Gps2sms"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="15dp"
    android:background="#424242"><!--CFD8DC-->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:theme="@style/TextColor"
        android:textSize="22dp"/>

    <LinearLayout android:focusable="true"
        android:focusableInTouchMode="true" android:layout_width="0px"
        android:layout_height="0px" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/TextColor"
        android:text="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actual"
        android:textStyle="italic"
        android:theme="@style/TextColor"
        android:textSize="22dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/TextColor"
            android:text="@string/longt" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/TextColor"
            android:layout_weight="1"
            android:text="@string/latt" />
    </LinearLayout>

    <android.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dlugosc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/TextColor"
            android:layout_weight="1"
            android:textStyle="italic"
            android:text="@string/moment" />

        <TextView
            android:id="@+id/szerokosc"
            android:theme="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/moment"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:theme="@style/TextColor"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/TextColor"
        android:text="@string/giveNumber" />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:hint="555123456"
        android:windowSoftInputMode="stateHidden"
        android:layout_height="wrap_content"
        android:ems="10"
        android:theme="@style/Custom"
        android:inputType="phone">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView8"
            android:theme="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prog" />

        <TextView
            android:id="@+id/actual"
            android:theme="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="500m" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="22dp"/>

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1000"
        android:theme="@style/Custom"
        android:progress="500" />

    <ToggleButton
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:id="@+id/toggleButton"
        android:textOn="@string/off"
        android:textOff="@string/on"
        android:layout_gravity="center_horizontal"
        android:checked="false"
        android:theme="@style/Custom"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:theme="@style/TextColor"
        android:id="@+id/wait"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/TextColor"
        android:text="dystans"
        android:id="@+id/dist"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/info"
        android:theme="@style/TextColor"
        android:id="@+id/info"
        android:layout_gravity="center_horizontal" />

</LinearLayout>